@@ -183,7 +183,7 @@ parameters:
 		-
 			message: '#^Short ternary operator is not allowed\. Use null coalesce operator if applicable or consider using long ternary\.$#'
 			identifier: ternary.shortNotAllowed
-			count: 3
+			count: 4
 			path: ../packetery/libs/Order/OrderExporter.php
 
 		-
